--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,12 @@
 :root {
     --background-color: #1e1e1e; /* ChatGPT Dark */
     --text-color: #ffffff; /* White text */
- 
+     
     
   }
   
 
+  ::-webkit-scrollbar { background-color: #252323; }
 
 
   
@@ -16,7 +17,7 @@
     background-color: #1e1e1e;
     color: var(--text-color);
     font-family: 'Arial', sans-serif;
-    margin: 0;
+    margin: 24px;
     padding: 0;
   }
   
