--- a/src/app/components/explore-beats/explore-beats.component.css
+++ b/src/app/components/explore-beats/explore-beats.component.css
@@ -1,42 +1,39 @@
 .explore-beats-container {
-    display: flex;
-    justify-content: space-between; /* Push items to opposite ends */
-    align-items: center;
-    padding: 20px;
-    background-color: transparent; /* Transparent background */
-    width: 100%; /* Ensure the container takes full width */
-  }
-  
-  .explore-beats {
-    display: flex;
-    align-items: center;
-  }
-  
-  .explore-text {
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .explore-text .explore {
-    color: white; /* "Explore" in white */
-  }
-  
-  .explore-text .beats {
-    color: #a098ff; /* "Beats" in purple */
-  }
-  
-  .refresh-button {
-    background-color: transparent; /* Transparent background */
-    color: #d49cff; /* Purple text */
-    border: 2px solid #d49cff; /* Purple border */
-    padding: 10px 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .refresh-button:hover {
-    background-color: purple; /* Purple background on hover */
-    color: white; /* White text on hover */
-  }
+  display: flex;
+  justify-content: space-between; /* Push items to opposite ends */
+  align-items: center;
+  padding-top: 100px;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: transparent; /* Transparent background */
+  width: 100%; /* Ensure the container takes full width */
+}
+
+.explore-beats {
+  display: flex;
+  align-items: center;
+}
+
+.explore-text {
+  font-size: 24px;
+  font-weight: bold;
+  background: linear-gradient(to right, #2AD4EE, #4AD4FF, #4C56F4, #FD3FA4, #F11E25);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.refresh-button {
+  background-color: transparent; /* Transparent background */
+  color: white; /* White text */
+  border: 2px solid white; /* White border */
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.refresh-button:hover {
+  background-color: white; /* White background on hover */
+  color: black; /* Black text on hover */
+}
