--- a/src/app/components/explore-beats/explore-beats.component.html
+++ b/src/app/components/explore-beats/explore-beats.component.html
@@ -1,9 +1,19 @@
 <div class="explore-beats-container">
     <div class="explore-beats">
       <span class="explore-text">
-        <span class="explore">Explore</span> <!-- White text -->
-        <span class="beats"> Beats</span> 
+        <span class="explore">Top Seller of this Month </span> 
+       
       </span>
+      <span class="star"> ✨</span> 
     </div>
-    <button class="refresh-button">Refresh</button>
+   
+   
+    <button class="refresh-button">View All→</button>
+    <button class="absolute right-12 z-10 bg-white rounded-full w-10 h-10 flex items-center justify-center shadow-md">
+      <span class="text-xl font-bold text-black">&lt;</span>
+    </button>
+    <button class="absolute right-1 z-10 bg-white rounded-full w-10 h-10 flex items-center justify-center shadow-md">
+<span class="text-xl font-bold text-black">&gt;</span>
+</button>
+
   </div>
